--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -2,7 +2,11 @@
 rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
 rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --strict --tags ~@wip"
+
+
+def_r = " -r features/support/env.rb -r features/step_definitions features "
+
 %>
-default: <%= std_opts %> features
-wip: --tags @wip:3 --wip features
+default: <%= std_opts %> <%= def_r %>
+wip: --tags @wip:3 --wip <%= def_r %>
 rerun: <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip
